--- a/pages/clips.html
+++ b/pages/clips.html
@@ -53,7 +53,7 @@
                 <div class="videoGal col-md-12 col-lg-6">
                     <h3>Una destacada</h3>
                     <p>Al finalizar la partida sale una jugada destacada, esta es una de ellas.</p>
-                    <video src="../assets/videos/dest_01.mp4" controls></video>
+                    <video src="../assets/videos/remates.mp4" controls></video>
                 </div>
                 <div class="videoGal col-md-12 col-lg-6">
                     <h3>Huida tactica</h3>
