--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!-- enlace bootstrap-->
-    <link rel="stylesheet" href="../styles/styles.css"> <!--vinculo css-->
+    <link rel="stylesheet" href="../css/styles.css"> <!--vinculo css-->
     <link rel="shortcut icon" href="../assets/imagenes/Logo_HADIR2.png" type="image/x-icon"> <!--logo pestaña-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--enlaces a fuentes de google-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,7 +92,7 @@
                                 <img src="../assets/imagenes/09 Esp.png" class="d-block w-100" alt="Especiales">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/10 cc.png" class="d-block w-100" alt="Especiales">
+                                <img src="../assets/imagenes/10 cc.png" class="d-block w-100" alt="Cuerpo a cuerpo">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
