Se acomodaron imagenes, carrusel auto, correcciones en SASS y se agregan animaciones y efectos.

--- a/pages/clips.html
+++ b/pages/clips.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet"> <!--tipografia parrafos y h1-->
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&family=Turret+Road:wght@200;300;400;500;700;800&display=swap" rel="stylesheet"> <!--tipografia subtitulos-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--animate css-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--aos-->
     <title>HADIR - Clips</title> <!--nombre pestaña-->
 </head>
 <body>
@@ -50,22 +52,22 @@
         <h2>Videos e imagenes</h2>
         <div class="container-fluid">
             <div class="row">
-                <div class="videoGal col-md-12 col-lg-6">
+                <div class="recuadro col-md-12 col-lg-6">
                     <h3>Una destacada</h3>
                     <p>Al finalizar la partida sale una jugada destacada, esta es una de ellas.</p>
                     <video src="../assets/videos/remates.mp4" controls></video>
                 </div>
-                <div class="videoGal col-md-12 col-lg-6">
+                <div class="recuadro col-md-12 col-lg-6">
                     <h3>Huida tactica</h3>
                     <p>En el mapa <em>Stakeout</em> hay una forma de escaparte si te acorralan en el pasillo.</p>
                     <video src="../assets/videos/esc_stake.mp4" controls></video>
                 </div>
-                <div class="videoGal col-md-12 col-lg-6">
+                <div class="recuadro col-md-12 col-lg-6">
                     <h3>Un clasico</h3>
                     <p>A continuación, un clásico jajaja uno de los compañeros parece que no sabe usar la escalera</p>
                     <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@toysoldi3rez3/video/7253857796825828614" data-video-id="7253857796825828614" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@toysoldi3rez3" href="https://www.tiktok.com/@toysoldi3rez3?refer=embed">@toysoldi3rez3</a> Cuando no es tu día... jajaja <a title="cod" target="_blank" href="https://www.tiktok.com/tag/cod?refer=embed">#COD</a> <a title="codmw" target="_blank" href="https://www.tiktok.com/tag/codmw?refer=embed">#CODMW</a> <a target="_blank" title="♬ sonido original - ToySoldi3rEz3" href="https://www.tiktok.com/music/sonido-original-7253857799359236870?refer=embed">♬ sonido original - ToySoldi3rEz3</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
                 </div>
-                <div class="videoGal col-md-12 col-lg-6">
+                <div class="recuadro col-md-12 col-lg-6">
                     <h3>Un resumen gracioso de Warzone</h3>
                     <p>Video viejo pero muy explicativo.</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/hMo2dWhWZpA?si=_sE5yWNd4ekiXFnL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -75,5 +77,9 @@
     </main>
     <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo insta" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
