--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet"> <!--tipografia parrafos y h1-->
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&family=Turret+Road:wght@200;300;400;500;700;800&display=swap" rel="stylesheet"> <!--tipografia subtitulos-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--animate css-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--aos-->
     <title>HADIR - Inicio</title> <!--Nombre de pestaña-->
 </head>
 <body>
@@ -48,7 +50,7 @@
         <h1>Inicio</h1> <!--Titulo derecha-->        
     </header>
     <div>
-        <img src="./assets/imagenes/Logo_COD.jpeg" alt="COD" id="logoCod"> <!--imagen presentacion-->
+        <img src="./assets/imagenes/Logo_COD.jpeg" class="animate__animated animate__fadeIn" alt="COD" id="logoCod"> <!--imagen presentacion-->
     </div>
     <main>
         <section id="bienvenidos">
@@ -68,19 +70,19 @@
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <article class="resuJuego col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
+                    <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Warzone</h3>
                         <p>Este modo de juego es <em>GRATUITO</em> y consiste en ser la ultima persona o grupo sobrevivientes en un mapa donde el gas va reduciendo la zona segura, lo cual hace que si o si tengas que moverte y cruzarte con rivales hasta que solo queda 1 persona o equipo. Si bien en Play Station para poder jugarlo necesitas pagar la suscripción a PS Plus no es necesario comprar el juego. En PC solo necesitas descargarlo desde alguna de las plataformas nombradas anteriormente.</p>
                     </article>
-                    <article class="resuJuego col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
+                    <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Campaña</h3>
                         <p>Al comprar el juego obtenemos la posibilidad de jugar la campaña que seria el <em>modo historia</em> de la saga, es de un solo jugador y se va guardando el progreso para continuarlo cuando gustes. Suelen ser muy atrapantes y se recomienda jugarlas porque podemos aprender mucho sobre las funciones y teclas asignadas para cada accion, luego si no las sentimos comodas configurarlo a nuestro gusto.</p>
                     </article>
-                    <article class="resuJuego col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
+                    <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Zombies</h3>
                         <p>Este es otro modo que se adquiere al comprar el juego, en esta version debemos sobrevivir a hordas de zombies que con cada ronda se va poniendo mas dificil, se puede hacer en grupo o solitario (este puede guardarse), a medida que la partida avanza juntamos esencia y herramientas para mejorar nuestro personaje y armas hasta que decidamos llamar al helicoptero de rescate.</p>
                     </article>
-                    <article class="resuJuego col-12 col-md-6 col-lg-3"> <!--resumen de los distintos formatos de juego-->
+                    <article class="recuadro col-12 col-md-6 col-lg-3"> <!--resumen de los distintos formatos de juego-->
                         <h3>Multijugador</h3>
                         <p>A este modo le dedicaremos esta pagina ya que es lo que jugamos. Aqui encontraras partidas normalmente de 6 contra 6 en varios mapas y amplia variedad de modos de juego, algunos mas frenéticos que otros pero todos suelen ser muy competitivos. También podrás editar tu perfil, operador, armamentos y más, ganaras experiencia con cada partida para subir de nivel e ir desbloqueando armas y accesorios que elegiras equipar segun tu estilo de juego.</p>
                     </article>
@@ -90,5 +92,9 @@
     </main>
     <footer><a href="#inicio1"><img src="./assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="./pages/contacto.html"><img src="./assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="./assets/imagenes/logo-insta.png" alt="logo insta" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
