--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet"> <!--tipografia parrafos y h1-->
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&family=Turret+Road:wght@200;300;400;500;700;800&display=swap" rel="stylesheet"> <!--tipografia subtitulos-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--animate css-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--aos-->
     <title>HADIR - Armas</title> <!--nombre pestaña-->
 </head>
 <body>
@@ -62,37 +64,37 @@
                 <p>Como arma secundaria hay 3 opciones base: <strong>Pistolas, Lanzadores y Especial.</strong> Pero si equipamos el comodin <em>Tirador</em> podremos equipar en este lugar otra principal.</p>
                 <p>El arma cuerpo a cuerpo siempre sera de este estilo, suele usarse para moverse mas rapido y combate muy cercano.</p>
                 <div id="pCarrusel">
-                    <div id="carrusel" class="carousel slide w-75">
+                    <div id="carrusel" class="carousel slide w-75" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../assets/imagenes/01 FA.png" class="d-block w-100" alt="Fusiles de asalto">
+                                <img src="../assets/imagenes/armas/01 FA.png" class="d-block w-100" alt="Fusiles de asalto">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/02 SF.png" class="d-block w-100" alt="Subfusiles">
+                                <img src="../assets/imagenes/armas/02 SF.png" class="d-block w-100" alt="Subfusiles">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/03 Esc.png" class="d-block w-100" alt="Escopetas">
+                                <img src="../assets/imagenes/armas/03 Esc.png" class="d-block w-100" alt="Escopetas">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/04 Am L.png" class="d-block w-100" alt="Ametralladoras Ligeras">
+                                <img src="../assets/imagenes/armas/04 Am L.png" class="d-block w-100" alt="Ametralladoras Ligeras">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/05 FT.png" class="d-block w-100" alt="Fusiles Tacticos">
+                                <img src="../assets/imagenes/armas/05 FT.png" class="d-block w-100" alt="Fusiles Tacticos">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/06 FP.png" class="d-block w-100" alt="Fusiles de Presicion">
+                                <img src="../assets/imagenes/armas/06 FP.png" class="d-block w-100" alt="Fusiles de Presicion">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/07 Pist.png" class="d-block w-100" alt="Pistolas">
+                                <img src="../assets/imagenes/armas/07 Pist.png" class="d-block w-100" alt="Pistolas">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/08 Lanz.png" class="d-block w-100" alt="Lanzadores">
+                                <img src="../assets/imagenes/armas/08 Lanz.png" class="d-block w-100" alt="Lanzadores">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/09 Esp.png" class="d-block w-100" alt="Especiales">
+                                <img src="../assets/imagenes/armas/09 Esp.png" class="d-block w-100" alt="Especiales">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/10 cc.png" class="d-block w-100" alt="Cuerpo a cuerpo">
+                                <img src="../assets/imagenes/armas/10 cc.png" class="d-block w-100" alt="Cuerpo a cuerpo">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
@@ -122,5 +124,9 @@
     </main>    
     <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo insta" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
