--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explicacion sobre los tipos de armas, equipamiento, mejoras de campo, ventajas, comodines y rachas de baja.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!-- enlace bootstrap-->
     <link rel="stylesheet" href="../css/styles.css"> <!--vinculo css-->
     <link rel="shortcut icon" href="../assets/imagenes/Logo_HADIR2.png" type="image/x-icon"> <!--logo pestaña-->
