se corrigen los alt de las imagenes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <section id="inicio1"></section>
     <header>
-        <img src="./assets/imagenes/Logo_HADIR2.png" alt="Logo HADIR"> <!--logo izquierda-->
+        <img src="./assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR"> <!--logo izquierda-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
         <h1>Inicio</h1> <!--Titulo derecha-->        
     </header>
     <div>
-        <img src="./assets/imagenes/Logo_COD.jpeg" class="animate__animated animate__fadeIn" alt="COD" id="logoCod"> <!--imagen presentacion-->
+        <img src="./assets/imagenes/Logo_COD.jpeg" class="animate__animated animate__fadeIn" alt="Logo Call Of Duty y operador con remera del clan HADIR" id="logoCod"> <!--imagen presentacion-->
     </div>
     <main>
         <section id="bienvenidos">
@@ -91,7 +91,7 @@
             </div>                           
         </section>
     </main>
-    <footer><a href="#inicio1"><img src="./assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="./pages/contacto.html"><img src="./assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="./assets/imagenes/logo-insta.png" alt="logo insta" class="imgFooter">Instagram</a></footer>
+    <footer><a href="#inicio1"><img src="./assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="./pages/contacto.html"><img src="./assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="./assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
