--- a/pages/menu_p.html
+++ b/pages/menu_p.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <section id="inicio1"></section>
-    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo HADIR">
+    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,25 +75,25 @@
                 <a href="#buscar">Buscar partida</a>
             </li>
         </ol>
-        <img src="../assets/imagenes/Pre_partida.png" alt="Pre Partida" class="imgFhd"> <!--clase para imagen 1080p-->
+        <img src="../assets/imagenes/Pre_partida.png" alt="Menu Pre Partida multijugador" class="imgFhd"> <!--clase para imagen 1080p-->
     </main>
     <div>
         <section id="perfil">
-            <img src="../assets/imagenes/Perfil.png" alt="Menú perfil" class="imgMenuVert" data-aos="flip-left"> <!--clase para imagen de menu vertical-->
+            <img src="../assets/imagenes/Perfil.png" alt="Menú perfil de jugador" class="imgMenuVert" data-aos="flip-left"> <!--clase para imagen de menu vertical-->
             <div>
                 <h3>Perfil</h3>
                 <p>Aquí vemos nuestro nivel, prestigio, CP (monedas del juego), ID por si alguien quiere agregarnos de amigo, el emblema y la tarjeta de visita que se muestran cuando eliminamos a alguien o salimos en la <em>jugada destacada</em>. Más abajo podremos editar estos y otros detalles como elegir el operador que se muestra, el arma que tiene en mano o agregar una insignia de clan entre otras cosas.</p>
             </div>
         </section>
         <section id="ajustes">
-            <img src="../assets/imagenes/Ajustes.png" alt="Menú ajustes" class="imgMenuVert" data-aos="flip-left">
+            <img src="../assets/imagenes/Ajustes.png" alt="Menú ajustes de configuracion" class="imgMenuVert" data-aos="flip-left">
             <div>
                 <h3>Ajustes</h3>
                 <p>Las opicones de este menú son muy variadas y puntuales, por lo que te permite agregar 15 ajustes rápidos para no tener que buscar tanto si queres cambiar algo en medio de una partida, por ejemplo, tener a mano el ajuste de "microfono abierto u oprimir para hablar" o la sensibilidad del mouse. Podremos configurar las teclas, graficos, sonidos, interfaz de juego, etc... Lo principal que recomendamos es tener activado el chat de voz para poder escuchar y hablar con otras personas y poner el <strong>FOV</strong> a 120 para que se sienta mas fluido, ya que el resto de ajustes dependera de tus gustos, comodidad y los recursos que dispongas ya sea en tu consola o PC.</p>
             </div>
         </section>
         <section id="armas">
-            <img src="../assets/imagenes/Menu armas.png" alt="Menú armas" class="imgMenuHor" data-aos="flip-down"> <!--clase para imagen de menu horizontal-->
+            <img src="../assets/imagenes/Menu armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor" data-aos="flip-down"> <!--clase para imagen de menu horizontal-->
             <h3>Armas</h3>
             <p>En este menu podremos configurar hasta 10 opciones de <a href="./armamento.html">armamento</a> para seleccionar el que queremos de forma rapida dentro de la partida,  sin perder el tiempo cambiando cosas mientras estamos en el campo de batalla, podremos elegir las <em>rachas de puntos</em> y probar las armas en la <em>galeria de tiro</em>.</p>
             </section>
@@ -105,7 +105,7 @@
             </div>
         </section>
     </div>
-    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo insta" class="imgFooter">Instagram</a></footer>
+    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
