--- a/pages/clips.html
+++ b/pages/clips.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <section id="inicio1"></section>
-    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo HADIR">
+    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,7 +76,7 @@
             </div>
         </div>
     </main>
-    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo insta" class="imgFooter">Instagram</a></footer>
+    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
