--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,7 +69,7 @@
             </div>            
         </form>        
     </main>
-    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="#"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo insta" class="imgFooter">Instagram</a></footer>
+    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="#"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
