Se cambia color menu hamburguesa, se agrega imagen al header, se corrige nombre y cambia ruta de algunas imagenes.

--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span id="colorHambur"><i class="fa-solid fa-bars"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -53,7 +53,7 @@
         <h2>Armamentos</h2>
         <p>En el menu de Armas podemos configurar nuestro armamento, seleccionar las rachas de baja y probar el arma configurada en la galeria de tiro</p>
         <div id="armas">
-            <img src="../assets/imagenes/Menu armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor">
+            <img src="../assets/imagenes/Menu-armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor">
         </div>
         <p>El armamento está compuesto por el arma principal, el arma secundaria (podemos equipar otra principal usando el comodín "Exceso de medios"), un arma cuerpo a cuerpo, equipamiento táctico, equipamiento letal, mejora de campo y 3 ventajas (pueden ser 4 si equipamos el comodín "Ventaja extra"), si las ventajas son del mismo "color" obtenemos una especialidad. Para entenderlo mejor vamos a dividirlo en 4 partes: <em>armas, equipamiento, ventajas y comodin</em>.</p>
         <img src="../assets/imagenes/Armamento.png" alt="Menu personalizacion de armamento" class="imgFhd"><!--Imagen del menu de personalizacion de armamento-->
@@ -68,34 +68,34 @@
                     <div id="carrusel" class="carousel slide w-75" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../assets/imagenes/armas/01 FA.png" class="d-block w-100" alt="Fusiles de asalto">
+                                <img src="../assets/imagenes/armas/01-FA.png" class="d-block w-100" alt="Menu seleccion de Fusiles de asalto">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/02 SF.png" class="d-block w-100" alt="Subfusiles">
+                                <img src="../assets/imagenes/armas/02-SF.png" class="d-block w-100" alt="Menu seleccion de Subfusiles">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/03 Esc.png" class="d-block w-100" alt="Escopetas">
+                                <img src="../assets/imagenes/armas/03-Esc.png" class="d-block w-100" alt="Menu seleccion de Escopetas">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/04 Am L.png" class="d-block w-100" alt="Ametralladoras Ligeras">
+                                <img src="../assets/imagenes/armas/04-AmL.png" class="d-block w-100" alt="Menu seleccion de Ametralladoras Ligeras">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/05 FT.png" class="d-block w-100" alt="Fusiles Tacticos">
+                                <img src="../assets/imagenes/armas/05-FT.png" class="d-block w-100" alt="Menu seleccion de Fusiles Tacticos">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/06 FP.png" class="d-block w-100" alt="Fusiles de Presicion">
+                                <img src="../assets/imagenes/armas/06-FP.png" class="d-block w-100" alt="Menu seleccion de Fusiles de Presicion">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/07 Pist.png" class="d-block w-100" alt="Pistolas">
+                                <img src="../assets/imagenes/armas/07-Pist.png" class="d-block w-100" alt="Menu seleccion de Pistolas">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/08 Lanz.png" class="d-block w-100" alt="Lanzadores">
+                                <img src="../assets/imagenes/armas/08-Lanz.png" class="d-block w-100" alt="Menu seleccion de Lanzadores">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/09 Esp.png" class="d-block w-100" alt="Especiales">
+                                <img src="../assets/imagenes/armas/09-Esp.png" class="d-block w-100" alt="Menu seleccion de armas Especiales">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/armas/10 cc.png" class="d-block w-100" alt="Cuerpo a cuerpo">
+                                <img src="../assets/imagenes/armas/10-cc.png" class="d-block w-100" alt="Menu seleccion de arma Cuerpo a cuerpo">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
@@ -123,8 +123,12 @@
             </article>
         </section>
     </main>    
-    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
+    <footer>
+        <a href="#inicio1"><img src="../assets/imagenes/footer/flechas-arriba.png" alt="Icono flecha arriba" class="imgFooter">Volver arriba</a>
+        <a href="../pages/contacto.html"><img src="../assets/imagenes/footer/msj.png" alt="Icono sobre" class="imgFooter">Contacto</a>
+        <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/footer/logo-insta.png" alt="Logo instagram" class="imgFooter">Instagram</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2c7afd331e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
