--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span id="colorHambur"><i class="fa-solid fa-bars"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -52,7 +52,7 @@
     <main>
         <h2>Contactanos</h2>
         <p>Buenas, veo que tienes alguna consulta o consejo para nosotros, dejanos tu ID, mail y tu mensaje asi podemos ayudarte o mejorar. Desde ya, muchas gracias.</p>
-        <form action="/submit" method="post">
+        <form class="formulario" action="/submit" method="post">
             <div class="mb-3 w-25">
                 <label for="Nombre" class="form-label">Gamertag</label>
                 <input type="text" class="form-control" name="Gamertag" id="Nombre">
@@ -61,7 +61,7 @@
                 <label for="Mail" class="form-label">Correo electronico</label>
                 <input type="email" class="form-control" id="mail" placeholder="correo@dominio.com">
             </div>
-            <div class="mb-3 w-50">
+            <div class="mb-3 w-50 formulario">
                 <label for="mensaje" class="form-label">Comentarios</label>
                 <textarea class="form-control" id="mensaje" rows="3"></textarea>
                 <label for=""></label>
@@ -69,8 +69,13 @@
             </div>            
         </form>        
     </main>
-    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="#"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
+    <footer>
+        <a href="#inicio1"><img src="../assets/imagenes/footer/flechas-arriba.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>
+        <a href="#"><img src="../assets/imagenes/footer/msj.png" alt="sobre" class="imgFooter">Contacto</a>
+        <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/footer/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2c7afd331e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
