--- a/pages/menu_p.html
+++ b/pages/menu_p.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span id="colorHambur"><i class="fa-solid fa-bars"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -93,20 +93,25 @@
             </div>
         </section>
         <section id="armas">
-            <img src="../assets/imagenes/Menu armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor" data-aos="flip-down"> <!--clase para imagen de menu horizontal-->
+            <img src="../assets/imagenes/Menu-armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor" data-aos="flip-down"> <!--clase para imagen de menu horizontal-->
             <h3>Armas</h3>
             <p>En este menu podremos configurar hasta 10 opciones de <a href="./armamento.html">armamento</a> para seleccionar el que queremos de forma rapida dentro de la partida,  sin perder el tiempo cambiando cosas mientras estamos en el campo de batalla, podremos elegir las <em>rachas de puntos</em> y probar las armas en la <em>galeria de tiro</em>.</p>
             </section>
         <section id="buscar">
-            <img src="../assets/imagenes/Buscar Partida.png" alt="Menú buscar partida" class="imgMenuVert" data-aos="flip-left">
+            <img src="../assets/imagenes/Buscar-Partida.png" alt="Menú buscar partida" class="imgMenuVert" data-aos="flip-left">
             <div>
                 <h3>Buscar partida</h3>
                 <p>Hay muchos modos de juego, variedad de mapas, podremos crear partidas privadas, también suele haber eventos temporales con modos distintos e innovadores que nos daran algun tipo de recompensa al completarlos, por ejemplo, en esta imagen hay un evento de "El juego del calamar" que sacaran al finalizar la temporada para poner algo nuevo.</p>
             </div>
         </section>
     </div>
-    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
+    <footer>
+        <a href="#inicio1"><img src="../assets/imagenes/footer/flechas-arriba.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>
+        <a href="../pages/contacto.html"><img src="../assets/imagenes/footer/msj.png" alt="sobre" class="imgFooter">Contacto</a>
+        <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/footer/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2c7afd331e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
