--- a/pages/modos.html
+++ b/pages/modos.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span id="colorHambur"><i class="fa-solid fa-bars"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -57,7 +57,7 @@
         <h3>Lista de partidas</h3>
         <p>La lista de partidas que podemos seleccionar es la siguiente y les indicaremos como se juega cada modo:</p>
         <div id="modos">
-            <img src="../assets/imagenes/Modos.png" alt="Modos de juego disponibles en multijugador" id="imgModos">
+            <img src="../assets/imagenes/Modos.png" alt="Menu seleccion de modos de juego en multijugador" id="imgModos">
             <ul><!--lista para explicar los modos de juego-->
                 <li>
                     <p><u><strong>Duelo por equipos:</strong></u> Modo por eliminaciones, es el mas comun y consiste en ser el primer equipo en llegar a una determinada cantidad de <em>kills.</em></p>
@@ -101,8 +101,13 @@
             </ul>
         </div>        
     </main>
-    <footer><a href="#inicio1"><img src="../assets/imagenes/flecha.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>   <a href="../pages/contacto.html"><img src="../assets/imagenes/msj.png" alt="sobre" class="imgFooter">Contacto</a>   <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a></footer>
+    <footer>
+        <a href="#inicio1"><img src="../assets/imagenes/footer/flechas-arriba.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>
+        <a href="../pages/contacto.html"><img src="../assets/imagenes/footer/msj.png" alt="sobre" class="imgFooter">Contacto</a>
+        <a href="https://www.instagram.com/hadir_clan_/" target="_blank"><img src="../assets/imagenes/footer/logo-insta.png" alt="logo instagram" class="imgFooter">Instagram</a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2c7afd331e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
